welcome.lessons.welcome.instructions.InstructionsDrawG.scala.error
Source:2: error: not found: value f
	for (i <- 1 to n) f()
                          ^